# Multi_Doc_Chat-LLMOps-Project

./: .gitignore  REACT_SETUP.md  README.md  main.py  pyproject.toml  requirements.txt  tests.py
frontend/: package-lock.json  package.json
frontend/public/: config.js  index.html
frontend/src/: App.tsx
frontend/src/components/: ChatInterface.tsx  FileUpload.tsx
frontend/src/services/: ApiService.ts
multi_doc_chat/: __init__.py
multi_doc_chat/logger/: __init__.py
multi_doc_chat/src/document_chat/: retrieval.py
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: model_loader.py
notebook/: RAG.ipynb  evaluations.ipynb
tests/: conftest.py  pytest.ini
tests/integration/: __init__.py  test_error_handling.py  test_fallback_integration.py  test_rag_pipeline.py  test_session_management.py
tests/unit/: __init__.py  test_data_ingestion.py  test_model_loader.py  test_models.py  test_retrieval.py
